--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.17.1"
+    "@astrojs/mdx": "^4.3.13",
+    "astro": "^5.17.1",
+    "astro-plantuml": "^0.1.4",
+    "pako": "^2.1.0",
+    "unist-util-visit": "^5.1.0"
   }
 }
