--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,51 @@
-# build output
-dist/
-
-# generated types
-.astro/
-
-# dependencies
+# ==================== 依赖 ====================
 node_modules/
 
-# logs
+# ==================== 构建产物 ====================
+dist/
+.astro/
+
+# ==================== 环境变量 ====================
+.env
+.env.*
+!.env.example
+
+# ==================== 编辑器 ====================
+.vscode/*
+!.vscode/settings.json
+!.vscode/extensions.json
+.idea/
+*.swp
+*.swo
+*~
+
+# ==================== 操作系统 ====================
+.DS_Store
+Thumbs.db
+Desktop.ini
+
+# ==================== 日志 ====================
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# environment variables
-.env
-.env.production
+# ==================== 缓存 ====================
+.cache/
+.npm/
+.eslintcache
+.prettiercache
 
-# macOS-specific files
-.DS_Store
+# ==================== 测试 ====================
+coverage/
+.nyc_output/
 
-# jetbrains setting folder
-.idea/
+# ==================== 临时文件 ====================
+*.tmp
+*.temp
+.tmp/
+.temp/
+
+# ==================== 其他 ====================
+*.local
