feature: 部署脚本优化

--- a/package.json
+++ b/package.json
@@ -7,13 +7,8 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "deploy": "node scripts/deploy.mjs",
-    "deploy:init": "node scripts/deploy.mjs init",
-    "deploy:update": "node scripts/deploy.mjs update",
-    "deploy:build": "node scripts/deploy.mjs build",
-    "deploy:status": "node scripts/deploy.mjs status",
-    "deploy:cron": "node scripts/deploy.mjs cron",
-    "deploy:help": "node scripts/deploy.mjs help"
+    "deploy": "node scripts/deploy.mjs build",
+    "deploy:status": "node scripts/deploy.mjs status"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.13",
