--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,13 @@ NOTIFY_EMAIL=admin@example.com
 
 # Git 分支，默认 main
 # GIT_BRANCH=main
+
+# ==================== AI 服务配置 ====================
+# OpenAI API 密钥 (必填，用于 npm run new/publish)
+OPENAI_API_KEY=your-api-key
+
+# API 基础 URL (可选，支持兼容服务如 Azure OpenAI、DeepSeek、Ollama)
+# OPENAI_BASE_URL=https://api.openai.com/v1
+
+# 使用的模型 (可选，默认 gpt-4o-mini)
+# OPENAI_MODEL=gpt-4o-mini
