--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
+    "new": "tsx scripts/new.ts",
+    "publish": "tsx scripts/publish.ts",
     "deploy": "node scripts/deploy.mjs build",
     "deploy:ssl": "node scripts/deploy.mjs ssl",
     "deploy:renew": "node scripts/deploy.mjs renew",
@@ -19,10 +21,14 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.13",
+    "@inquirer/prompts": "^8.2.0",
     "astro": "^5.17.1",
     "astro-plantuml": "^0.1.4",
+    "dotenv": "^17.2.4",
     "nodemailer": "^6.9.15",
+    "openai": "^6.18.0",
     "pako": "^2.1.0",
+    "tsx": "^4.21.0",
     "unist-util-visit": "^5.1.0"
   }
 }
