--- a/openspec/config.yaml
+++ b/openspec/config.yaml
@@ -1,4 +1,10 @@
-schema: spec-driven
+# schema: spec-driven
+schema: rosydawn-sdd
+
+context: |
+  语言：中文（简体）
+  所有产出物必须用简体中文撰写。
+
 
 # Project context (optional)
 # This is shown to AI when creating artifacts.
