--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/pinyin": "^2.10.2",
     "astro": "^5.17.1",
     "dotenv": "^17.2.4",
+    "gray-matter": "^4.0.3",
     "openai": "^6.18.0",
     "pako": "^2.1.0",
     "pinyin": "^4.0.0",
